# django-vite-tailwind-mysite

./: .dockerignore  .env  .env.dist  .env.production  .gitignore  DEPLOYMENT.md  Dockerfile  coolify.yml  docker-compose.yaml  docker-compose.yml  entrypoint.prod.sh  nixpacks.toml  package.json  prod.Dockerfile  pyproject.toml  requirements.txt  vite.config.js
accounts/: models.py
accounts/migrations/: 0001_initial.py
assets/: index.js  style.css
project/: settings.py  urls.py  wsgi.py
static/: manifest.json
static/css/: style-BxjCB2XC.css.br  style-r6ZXEu6y.css  style.css
static/js/: alpine-BLrUkf4X.js.br  hello-bundle.js  htmx-CXo84kJZ.js  htmx-CXo84kJZ.js.br  index-BBvnorF1.js  index-bundle.js
static_root/: manifest.json
static_root/css/: style-BxjCB2XC.css  style-r6ZXEu6y.css.br
templates/: base.html
templates/website/: index.html
website/: urls.py
