[project]
name = "vite-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==6.0",
    "django-browser-reload>=1.21.0",
    "django-cotton>=2.6.0",
    "django-environ>=0.12.0",
    "django-vite>=3.1.0",
    "lucide[django]>=1.1.3",
]
